Bug 1894546 - Treat content-visibility:auto as visible when document is being used as an image. r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D216320