layout/style/nsStyleStruct.cpp
@@ -3547,9 +3547,11 @@ StyleContentVisibility nsStyleDisplay::ContentVisibility(
   if (PrecludesSizeContainmentOrContentVisibilityWithFrame(aFrame)) {
     return StyleContentVisibility::Visible;
   }
-  // If we're in print/print-preview, always treat `auto` as `visible`.
+  // If we're in print/print-preview, or being used as an image, we should
+  // always treat `auto` as `visible`.
   if (mContentVisibility == StyleContentVisibility::Auto &&
-      aFrame.PresContext()->IsPrintingOrPrintPreview()) {
+      (aFrame.PresContext()->IsPrintingOrPrintPreview() ||
+       aFrame.PresContext()->Document()->IsBeingUsedAsImage())) {
     return StyleContentVisibility::Visible;
   }
   return mContentVisibility;
